<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:background="@drawable/circular_background"
        android:contentDescription="Profile Image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/full_name_hint"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <!-- My Account -->
        <TextView
            android:id="@+id/myAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/my_account"
            android:textColor="@color/grey"
            android:textSize="16sp"/>

        <!-- Premium -->
        <TextView
            android:id="@+id/premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/premium"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <!-- Privacy Policy -->
        <TextView
            android:id="@+id/privacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <!-- Help Center -->
        <TextView
            android:id="@+id/helpCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/help_center"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <!-- Rate Us -->
        <TextView
            android:id="@+id/rateUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:clickable="true"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/rate_us"
            android:textColor="@color/grey"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>
